fixed containsGoToLabel function